--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,3 +34,12 @@ jobs:
         working-directory: ${{github.workspace}}/build
         shell: bash
         run: cmake --build . --config $BUILD_TYPE
+
+      - name: Upload artifacts
+          uses: 'actions/upload-artifact@v2'
+          with:
+              name: FastestPizzaDelivery ${{ matrix.os }}
+              path: |
+                ${{ github.workspace }}/build/bin/FastestPizzaDelivery
+                ${{ github.workspace }}/build/bin/Release/FastestPizzaDelivery.exe
+              retention-days: 2
